--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -72,14 +72,39 @@ Please refer to the delivered code.
 \section{Third Puzzle}
 Our third puzzle is Sudoku, we however have modified the rules a bit because it makes it easier to implement and we feel that this modification makes it more fit to the problem given.\\
 The difference between this and the normal Sudoku is the fact that the normal sudoku is usually a 3x3 numbered type of grid (numbers ranging from and including 1 to and including 9), and the board is pre-filled with some numbers inside already, these numbers are not allowed to change whatsoever.\\
-Our modified version starts out with an empty board, follows the same rules as the normal Sudoku but we just fill the board in an arbitrary pattern and try to find a solution that doesn't violate the constraints. We do this by randomly filling each "square" with numbers from 1 to k*k (for instance 1-9 for k=3 - which is the normal sudoku sized found in newspapers). We then only swap numbers inside each "square", this is our added constraint. This modified version makes it easy to create hard problems, as we can simply increase $k$ and make bigger boards, thus making it much more complex.
+Our modified version starts out with an empty board, follows the same rules as the normal Sudoku but we just fill the board in an arbitrary pattern and try to find a solution that doesn't violate the constraints. We do this by randomly filling each "square" with numbers from 1 to k*k (for instance 1-9 for k=3 - which is the normal sudoku size found in newspapers). We then only swap numbers inside each "square", this is our added constraint. This modified version makes it easy to create hard problems, as we can simply increase $k$ and make bigger boards, thus making it much more complex.
 
 \section{Demonstration of K-queen}
 Will be shown on Friday 25. October 2013.
 The assignment text  k = 8 is easy, k = 25 is medium and k=1000 is hard-case, but the k = 2500 has a runtime of approximately 1 min.
 
 \section{Result of K-queen: easy-case}
-<input results here>
+\begin{verbatim}
+QueenManager k=8
+The board 
+[0, 0, 0, 0, 0, 1, 0, 0]
+[0, 0, 0, 1, 0, 0, 0, 0]
+[1, 0, 0, 0, 0, 0, 0, 0]
+[0, 0, 0, 0, 1, 0, 0, 0]
+[0, 0, 0, 0, 0, 0, 0, 1]
+[0, 1, 0, 0, 0, 0, 0, 0]
+[0, 0, 0, 0, 0, 0, 1, 0]
+[0, 0, 1, 0, 0, 0, 0, 0]
+
+Iterations for this run:55
+Time spent on this run: 1ms
+\end{verbatim}
+
+Final statistic for 20 runs with 10000 iterations:
+\begin{verbatim}
+Total time spent: 45ms
+Total iterations for all goal states: 745
+Runs which resulted in a goal state: 20 out of 20
+Run reaching a goal state with the fewest iterations: 6
+Run reaching a goal state with the most iterations: 199
+Average iterations per run reaching a goal state: 37.25
+\end{verbatim}
+
 
 \section{Demonstration of Graph-color}
 Will be shown on Friday 25. October 2013.
@@ -88,16 +113,98 @@ The first "easy" one have a 40 nodes/countries and 67 edges/countries bordering 
 There's included a \textit{graph-color-0.txt} which is the example text provided that told us how to interpret the data, it's not used for the problem; only for debugging and testing, the same goes for \textit{graph-color-test1.txt} file.\\ 
 We decided to classify these problems as such because it is more logical that the more edges and nodes you have, the harder the problem becomes. It's also the only input we have for this problem.
 This problem is also known as vertex-coloring, which is a problem where you have to color every node with a color so that none of its neighbor have the same color.\\
-The data we got is explained here:\href{http://www.idi.ntnu.no/emner/it3105/materials/data/graph-color-format.txt}{http://www.idi.ntnu.no/emner/it3105/materials/data/graph-color-format.txt},
-as you can see, these nodes are provided with coordinates. These coordinates are mostly there for the visual representation if needed, it's not needed for the actual problem, this is because there's no need for information \textbf{where} the nodes are located as long as we know how the edges are connected - and thereby %missing?
+The data we got is explained here:\\ \href{http://www.idi.ntnu.no/emner/it3105/materials/data/graph-color-format.txt}{http://www.idi.ntnu.no/emner/it3105/materials/data/graph-color-format.txt},
+as you can see, these nodes are provided with coordinates. These coordinates are mostly there for the visual representation if needed, it's not needed for the actual problem, this is because there's no need for information \textbf{where} the nodes are located as long as we know how the edges are connected. For this task, we've decided to use a neighbor-matrix to represent the nodes and the edges, this is represented by a 2-dimensional boolean array where a \textit{True} indicates an edge between a node \textit{i} and node \textit{j} ($i \neq j$) and an int array which contains the colors of each node.
 
 \section{Result of Graph: easy-case}
+One of the runs and its results printed out, the N indicates which node we are looking at and the C tells us which color this node is. We have used numbers instead of colors because this is easier to work with.\\
+\begin{verbatim}
+GraphManager: graph-color-1.txt
+
+num of conflicts in total: 0
+N = Node C = Color
+N:0 C:2| N:1 C:1 
+N:1 C:1| N:0 C:2 N:2 C:0 N:3 C:3 N:4 C:2 
+N:2 C:0| N:1 C:1 N:3 C:3 N:4 C:2 
+N:3 C:3| N:1 C:1 N:2 C:0 N:4 C:2 
+N:4 C:2| N:1 C:1 N:2 C:0 N:3 C:3 N:5 C:3 
+N:5 C:3| N:4 C:2 N:6 C:0 
+N:6 C:0| N:5 C:3 N:7 C:2 N:8 C:3 
+N:7 C:2| N:6 C:0 N:8 C:3 N:9 C:1 N:10 C:0 
+N:8 C:3| N:6 C:0 N:7 C:2 N:9 C:1 N:10 C:0 
+N:9 C:1| N:7 C:2 N:8 C:3 N:10 C:0 N:11 C:2 
+N:10 C:0| N:7 C:2 N:8 C:3 N:9 C:1 N:11 C:2 N:12 C:3 
+N:11 C:2| N:9 C:1 N:10 C:0 N:12 C:3 
+N:12 C:3| N:10 C:0 N:11 C:2 N:13 C:2 
+N:13 C:2| N:12 C:3 N:14 C:3 
+N:14 C:3| N:13 C:2 N:15 C:0 N:16 C:1 
+N:15 C:0| N:14 C:3 N:16 C:1 N:18 C:3 
+N:16 C:1| N:14 C:3 N:15 C:0 N:17 C:2 N:18 C:3 N:19 C:0 
+N:17 C:2| N:16 C:1 N:18 C:3 N:19 C:0 
+N:18 C:3| N:15 C:0 N:16 C:1 N:17 C:2 N:19 C:0 N:20 C:2 
+N:19 C:0| N:16 C:1 N:17 C:2 N:18 C:3 N:20 C:2 N:22 C:1 
+N:20 C:2| N:18 C:3 N:19 C:0 N:21 C:0 N:22 C:1 
+N:21 C:0| N:20 C:2 N:22 C:1 
+N:22 C:1| N:19 C:0 N:20 C:2 N:21 C:0 N:23 C:2 
+N:23 C:2| N:22 C:1 N:24 C:3 N:26 C:0 
+N:24 C:3| N:23 C:2 N:25 C:1 N:26 C:0 
+N:25 C:1| N:24 C:3 N:26 C:0 N:27 C:3 
+N:26 C:0| N:23 C:2 N:24 C:3 N:25 C:1 N:27 C:3 
+N:27 C:3| N:25 C:1 N:26 C:0 N:28 C:0 N:29 C:1 N:30 C:2 
+N:28 C:0| N:27 C:3 N:29 C:1 N:30 C:2 N:31 C:3 
+N:29 C:1| N:27 C:3 N:28 C:0 N:30 C:2 N:31 C:3 
+N:30 C:2| N:27 C:3 N:28 C:0 N:29 C:1 N:31 C:3 
+N:31 C:3| N:28 C:0 N:29 C:1 N:30 C:2 N:32 C:2 
+N:32 C:2| N:31 C:3 N:33 C:0 N:34 C:1 
+N:33 C:0| N:32 C:2 N:34 C:1 N:35 C:2 
+N:34 C:1| N:32 C:2 N:33 C:0 N:35 C:2 
+N:35 C:2| N:33 C:0 N:34 C:1 N:36 C:1 
+N:36 C:1| N:35 C:2 N:37 C:3 
+N:37 C:3| N:36 C:1 N:38 C:2 N:39 C:1 
+N:38 C:2| N:37 C:3 N:39 C:1 
+N:39 C:1| N:37 C:3 N:38 C:2 
+\end{verbatim}
+
+Final statistic for 20 runs with 10000 iterations:
+\begin{verbatim}
+Iterations for this run:20
+Time spent on this run: 2ms
+Total time spent: 74ms
+Total iterations for all goal states: 467
+Runs which resulted in a goal state: 20 out of 20
+Run reaching a goal state with the fewest iterations: 13
+Run reaching a goal state with the most iterations: 49
+Average iterations per run reaching a goal state: 23.35
+
+\end{verbatim}
+
 
 \section{Demonstration of the modified Sudoku}
 Will be shown on Friday 25. October 2013.
-%Insert whatever k is for hard, medium and easy <We have decided that k = 2 is easy case, 3 is medium, 4 is hard.>
+We have decided that k = 2 is easy case, 3 is medium, 8 is hard. 
 We have decided to use these \textit{k}s because of the runtime, the k for the hard problem runs in X minutes - which is what the assignment text wants the runtime of a hard problem to be.
 
 \section{Result of modified Sudoku: easy-case}
-fff
+\begin{verbatim}
+The board
+
+ 4  2     1  3 
+ 1  3     2  4 
+
+ 3  1     4  2 
+ 2  4     3  1 
+ 
+ Iterations for this run:9
+ Time spent on this run: 1ms
+\end{verbatim}
+Final statistic for 20 runs with 10000 iterations:
+\begin{verbatim}
+Total time spent: 27ms
+Total iterations for all goal states: 132
+Runs which resulted in a goal state: 20 out of 20
+Run reaching a goal state with the fewest iterations: 2
+Run reaching a goal state with the most iterations: 14
+Average iterations per run reaching a goal state: 6.6
+
+\end{verbatim}
 \end{document}
